force-app/main/default/objects/Contract_Pricing__c/Contract_Pricing__c.object-meta.xml
<CustomObject>
    <description>This will hold all the variations of pricing for customers. This will be used for billing projects.</description>
    <label>Contract Pricing</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Contract Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>