force-app/main/default/objects/Contract_Pricing__c/fields/Calculated_Per_Hour_Rate__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Per_Hour_Rate__c</fullName>
    <formula>IF( Discount_Percent__c &lt;= 0, Per_Hour_Rate__c - Discount_Amount__c, Per_Hour_Rate__c - (Per_Hour_Rate__c * Discount_Percent__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Per-Hour Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>