force-app/main/default/objects/Contract_Pricing__c/fields/Contract_Pricing_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Pricing_ID__c</fullName>
    <formula>Id</formula>
    <label>Contract Pricing ID</label>
    <type>Text</type>
</CustomField>