force-app/main/default/objects/Contract_Pricing__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>IF( Effective_Start_Date__c &lt;= TODAY() &amp;&amp; Effective_End_Date__c &gt;= TODAY(), TRUE, FALSE)</formula>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>