force-app/main/default/objects/Contract_Pricing__c/fields/Per_Hour_Rate__c.field-meta.xml
<CustomField>
    <fullName>Per_Hour_Rate__c</fullName>
    <label>Per-Hour Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>